--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,12 +4,13 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(255, 255, 255, 3.87);
   background-color: #242424;
+  padding: 0
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
+  /* -webkit-font-smoothing: antialiased; */
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
@@ -137,7 +138,7 @@ li:nth-child(12) {
   border-radius: 50%;
   /* box-shadow: black 0px 0px 35px 8.75px inset; */
   border: 1px solid black;
-  background: white;
+  background-color: rgba(255, 255, 255, 0.75);
   width: 535px;
   height: 535px;
   display: flex;
@@ -192,6 +193,7 @@ li:nth-child(12) {
 #container {
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .circle-days-container,
@@ -203,9 +205,9 @@ li:nth-child(12) {
 }
 
 .center-image {
-  width: 17rem;
-  height: 17rem;
-  border-radius: 50%;
+  width: 13rem;
+  height: 13rem;
+  /* border-radius: 50%; */
 }
 
 #circle-hours .circle {
@@ -216,4 +218,48 @@ li:nth-child(12) {
   transform: scale(1.2);
   cursor: pointer;
   background: rgba(0, 0, 0, 0.8);
+}
+
+.cardinals {
+  color: lightgrey;
+  font-weight: bold;
+  font-size: larger;
+}
+
+.cardinal-E:hover,
+.cardinal-S:hover,
+.cardinal-N:hover,
+.cardinal-W:hover {
+  color: darkgrey;
+}
+
+.cardinal-N {
+  position: absolute;
+  top: -1.2rem;
+
+  left: 16.3rem;
+}
+
+.cardinal-E {
+  position: absolute;
+  left: 34.5rem;
+  top: 16.9rem;
+}
+
+.cardinal-S {
+  position: absolute;
+  top: 35rem;
+  left: 16.4rem;
+}
+
+.cardinal-W {
+  position: absolute;
+  top: 16.9rem;
+  left: -2rem;
+}
+
+.real-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
 }
