--- a/client/src/index.css
+++ b/client/src/index.css
@@ -596,3 +596,18 @@ li:nth-child(12) {
 .hide {
   display: none;
 }
+
+.lifetracker-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-section {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
+}
