--- a/client/src/index.css
+++ b/client/src/index.css
@@ -148,9 +148,8 @@ li:nth-child(12) {
 #circle-days {
   position: absolute;
   transform: translate(-50%, -50%);
-  transform: translate(-16%, -50%);
+  /* transform: translate(-16%, -50%); */
   border-radius: 50%;
-  /* box-shadow: black 0px 0px 35px 8.75px inset; */
   border: 1px solid white;
   width: 535px;
   height: 535px;
@@ -163,9 +162,7 @@ li:nth-child(12) {
 #circle-hours {
   position: absolute;
   transform: translate(-50%, -50%);
-  transform: translate(-16%, -50%);
   border-radius: 50%;
-  /* box-shadow: black 0px 0px 35px 8.75px inset; */
   border: 1px solid black;
   background: white;
   background-color: #242424;
@@ -320,7 +317,6 @@ li:nth-child(12) {
 .circle-astro-container {
   display: flex;
   justify-content: center;
-  max-width: 35rem;
   border-radius: 50%;
 }
 
@@ -409,6 +405,8 @@ li:nth-child(12) {
   height: 100vh;
   display: flex;
   align-items: center;
+  justify-content: center;
+  width: 42rem;
 }
 
 .vertical-line-n {
@@ -632,7 +630,7 @@ li:nth-child(12) {
 }
 
 .show {
-  z-index: 400;
+  /* z-index: 400; */
   display: flex;
   justify-content: flex-start;
   align-content: center;
